--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:theme">
         <activity android:name=".MainActivity">
 
             <!-- <intent-filter> -->
@@ -38,22 +39,16 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".LoginActivity">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".RecordActivity"
             android:theme="@style/AppTheme">
-
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
-
-
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
@@ -92,6 +87,21 @@
         <activity android:name=".OrderMoreActvity" />
         <activity android:name=".PrevOrdersActivity" />
         <activity android:name=".AddNewOrderActivity"></activity>
+
+
+        <meta-data
+            android:name="firebase_url"
+            android:value="@string/firebase_url" />
+        <meta-data
+            android:name="firebase_root_path"
+            android:value="@string/firebase_root_path" />
+        <meta-data
+            android:name="firebase_storage_url"
+            android:value="@string/firebase_storage_url" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_api_key" />
+
     </application>
 
 </manifest>
