--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,20 +73,20 @@ dependencies {
     compile files('libs/PayU-release.jar')
     compile group: 'com.zopim.android', name: 'sdk', version: '1.3.5.1'
     compile group: 'com.zendesk', name: 'sdk', version: '1.11.0.1'
-    compile('com.nispok:snackbar:2.11.+') {
-        // exclusion is not necessary, but generally a good idea.
-        exclude group: 'com.google.android', module: 'support-v4'
-    }
+//    compile('com.nispok:snackbar:2.11.+') {
+//        // exclusion is not necessary, but generally a good idea.
+//        exclude group: 'com.google.android', module: 'support-v4'
+//    }
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
     compile files('libs/mail.jar')
     compile files('libs/PayU-release.jar')
     compile group: 'com.zopim.android', name: 'sdk', version: '1.3.5.1'
     compile group: 'com.zendesk', name: 'sdk', version: '1.11.0.1'
-    compile('com.nispok:snackbar:2.11.+') {
+    //compile('com.nispok:snackbar:2.11.+') {
         // exclusion is not necessary, but generally a good idea.
-        exclude group: 'com.google.android', module: 'support-v4'
-    }
+//        exclude group: 'com.google.android', module: 'support-v4'
+//    }
 //    compile project(':FORTSDKv1.4.1')
 //    compile 'com.android.support:multidex:1.0.1'
 //    compile 'com.android.support:design:25.0.1'
@@ -140,10 +140,10 @@ dependencies {
     compile files('libs/PayU-release.jar')
     compile group: 'com.zopim.android', name: 'sdk', version: '1.3.5.1'
     compile group: 'com.zendesk', name: 'sdk', version: '1.11.0.1'
-    compile('com.nispok:snackbar:2.11.+') {
-        // exclusion is not necessary, but generally a good idea.
-        exclude group: 'com.google.android', module: 'support-v4'
-    }
+//    compile('com.nispok:snackbar:2.11.+') {
+//        // exclusion is not necessary, but generally a good idea.
+//        exclude group: 'com.google.android', module: 'support-v4'
+//    }
 //    compile project(':FORTSDKv1.4.1')
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.android.support:design:25.0.1'
